# scan-X

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: configuration.md  usage.md
src/scan_x/: __init__.py  __main__.py  app.py  app.tcss  cli.py  config.py
src/scan_x/models/: __init__.py  project.py  report.py  vulnerability.py
src/scan_x/reports/: __init__.py  csv_report.py  generator.py  html.py  json_report.py  pdf.py
src/scan_x/reports/templates/: report.css  report.html
src/scan_x/scanners/: __init__.py  base.py  cli_tools.py  detector.py  dotnet.py  gradle.py  maven.py  npm.py  python_scanner.py
src/scan_x/screens/: __init__.py  detail.py  home.py  report.py  scan.py  search.py  settings.py
src/scan_x/sources/: __init__.py  aggregator.py  base.py  github_advisory.py  nvd.py  osv.py  snyk.py
src/scan_x/utils/: __init__.py  cache.py  rate_limiter.py
src/scan_x/widgets/: __init__.py  chart.py  filter_bar.py  search_bar.py  severity_badge.py  status_bar.py  vuln_table.py
tests/: conftest.py  test_cli.py  test_config.py  test_models.py
tests/test_reports/: test_csv.py  test_pdf.py
tests/test_scanners/: test_detector.py  test_npm.py  test_python.py
tests/test_sources/: test_aggregator.py  test_nvd.py  test_osv.py
