[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scan-x"
version = "0.1.0"
description = "Terminal UI for vulnerability searching, scanning, and reporting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "scan-x contributors" },
]
keywords = ["vulnerability", "security", "tui", "scanner", "cve"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "textual>=0.89.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "plotext>=5.2.0",
    "jinja2>=3.1.0",
    "weasyprint>=62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "respx>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/rico-ratsim/scan-x"
Repository = "https://github.com/rico-ratsim/scan-x"
Issues = "https://github.com/rico-ratsim/scan-x/issues"

[project.scripts]
scan-x = "scan_x.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scan_x"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
